[b]3.1.6[/b]
- Fixed: Removed ++ from actionbronson merge.

[b]3.1.5[/b]
- Fixed: Startup bug
- Added: Improved support for highlights HD up to 4500 kbps, another hack fix.

[b]3.1.4[/b]
- Fixed: PIL imaging import wrapped in try for unsupported platforms.
- Fixed: improved support for condensed HD to 5000kbps.  This is a hack fix for now.
- Added: Scores support for by-date ondemand in icons.  Enabled via settings.

[b]3.1.3[/b]
- Added: Support for condensed HD.  This is a hack fix for now.

[b]3.1.2[/b]
- Added: Support for live period timings.
- Added: Cleared up header text with logos instead
- Fixed: Condensed and highlight support.

[b]3.1.1[/b]
- Changed:  Added additional exception handling if icon cleanup has write issues

[b]3.1.0[/b]
- Added: Icon support.

[b]3.0.9[/b]
- Added: Support for Medium Quality (MD) Live streams on the front screen option

[b]3.0.8[/b]
- Added: Support for Medium Quality (MD) Live streams - not supported on front screen currently thru API
- Changed:  Resolution moved separately to Live and OnDemand settings

[b]3.0.7[/b]
- Fixed: Fix to API changes related to on-demand streams

[b]3.0.6[/b]
- Changed: Moved Live Streams to the front page (one less click!)

[b]3.0.5[/b]
- Added: Live setting added to customize live screen (previously live alternate)
- Changed: Settings names updated

[b]3.0.4[/b]
- Changed: Asterisk is added back upon request

[b]3.0.3[/b]
- Added: Alternate Live category added which directly displays streams at the event level
- Changed: Display light green to indicate feed type (home or away) instead of the difficult to see asterisk

[b]3.0.1[/b]
- Changed: On-demand by date displays favorite team at the top
- Changed: Live event displays favorite team at the top

[b]3.0.0[/b]
- Added: HLS SD option added as derived from HLS HD streams
- Fixed: Omit iStream when it is redundant to HD or SD equivalent

[b]2.9.9[/b]
- Added: HLS stream option added applies to on-demand events